# simple-c-export

./: Foo.hs  run-haskell.c  simple-c-export.cabal  stack.yaml
